fixed alignment issue with navigation

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -22,6 +22,7 @@ a {
     width: 100%;
     background: black;
     color: white;
+    text-align: center;
 }
 
 
